--- a/style.css
+++ b/style.css
@@ -1,81 +1,1 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  border: 0;
-}
-
-html, body {
-  height: 100%;
-}
-
-html {
-  background: #ce1e35;
-}
-
-.card {
-  margin: auto;
-  position: relative;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
-  width: 320px;
-}
-
-.avatar {
-  margin: auto;
-  display: block;
-  width: 75px;
-  height: 75px;
-  border: 2px solid #fff;
-  -webkit-border-radius: 50%;
-     -moz-border-radius: 50%;
-          border-radius: 50%;
-}
-
-article {
-  height: 100px;
-  text-align: center;
-}
-
-.about {
-  position: relative;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
-}
-
-h1 {
-  margin-bottom: 10px;
-  font-weight: normal;
-  font-family: "proxima-nova",sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  color: #ededed;
-  text-shadow: rgba(0, 0, 0, 1) 0px 1px 0px;
-}
-
-p {
-  margin-bottom: 15px;
-  font-weight: normal;
-  font-family: "proxima-nova",sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-}
-
-.icon {
-  margin: 0 5px;
-}
-
-.twitter {
-  color: #55acee;
-  background: url(twitter.svg) no-repeat center left;
-  background-size: 16px;
-  display: inline-block;
-  height: 16px;
-  width: 16px;
-  text-indent: -99999px;
-}
+/*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block}audio:not([controls]){display:none;height:0}progress{vertical-align:baseline}[hidden],template{display:none}a{background-color:transparent;-webkit-text-decoration-skip:objects}a:active,a:hover{outline-width:0}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit;font-weight:bolder}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}svg:not(:root){overflow:hidden}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}button,input,select,textarea{font:inherit;margin:0}optgroup{font-weight:700}button,input{overflow:visible}button,select{text-transform:none}[type=reset],[type=submit],button,html [type=button]{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-input-placeholder{color:inherit;opacity:.54}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}body{padding:32px;font-family:courier,monospace;background-color:#222324;color:#bababa;font-size:14px}.philip-brown{font-size:16px;font-weight:400;text-transform:lowercase}ul{color:#494b4d;list-style-type:none}ul>li:before{content:"\2014";position:absolute;margin-left:-22px}li{margin-bottom:2px}a{text-decoration:none;color:#696b6e}a:hover{color:#1cc3e8}
